Fixed visible buttons in bookmark manager

--- a/theme/chrome/skin/classic/communicator/bookmarks/bookmarksManager.css
+++ b/theme/chrome/skin/classic/communicator/bookmarks/bookmarksManager.css
@@ -25,3 +25,7 @@
    -moz-appearance: toolbarbutton !important;
    color: ButtonText !important;
 }
+
+#back-button, #forward-button {
+    visibility: collapse !important;
+}
